<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/view_page_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image_view_pager"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="10dp"
        android:adjustViewBounds="true"
        tools:src="@drawable/img3"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/off_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <TextView
        android:id="@+id/off_text_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_off"
        android:layout_marginEnd="3dp"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/off_text_view"
        app:layout_constraintEnd_toStartOf="@+id/off_text_view"
        app:layout_constraintTop_toTopOf="@+id/off_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/off_text_blue"
        app:layout_constraintEnd_toStartOf="@+id/off_text_blue"
        app:layout_constraintTop_toTopOf="@+id/off_text_blue" />

    <ImageButton
        android:id="@+id/imageButton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        app:srcCompat="@drawable/ic_baseline_east_24"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>