<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        style="?attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menus"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        style="?attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_shopping_bag_24"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name_home_fragment"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_view_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/image_view_sort"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageButton
        android:id="@+id/image_view_sort"
        style="?attr/borderlessButtonStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_sort"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:layout_marginTop="3dp"
        android:text="@string/description"
        android:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <ImageView
        android:id="@+id/imageView3"
        style="?attr/borderlessButtonStyle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_description"
        app:layout_constraintStart_toEndOf="@+id/text_view_description"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/cloth"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_shirt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            app:dotsColor="#9E9E9E"
            app:dotsCornerRadius="8dp"
            app:dotsSize="5dp"
            app:dotsSpacing="3dp"
            app:dotsWidthFactor="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:progressMode="false"
            app:selectedDotColor="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bottom_navigation_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_baseline_search_24"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/round_other_houses_24"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>